# ContextLifecycleProtocol

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.console/: .context  log.md
.context/: config.yaml
.context/examples/: pc_audit_capsule.yaml
.context/schemas/: investigation_capsule.yaml
.custodian/: config.yaml
adapters/: install.sh  install_test.sh
adapters/claude/: README.md
adapters/claude/hooks/tests/: run_hook_tests.sh  validate_examples.py
docs/: README.md  adopting.md  ecosystem.md  philosophy.md
docs/adapters/: adapter_contract.md  claude_code_adapter.md
presets/: audit-sitter.yaml  ci-investigator.yaml  watchdog-loop.yaml
src/context_lifecycle/: __init__.py  lifecycle.py
src/context_lifecycle/cli/: context.py  hook.py  main.py  session.py
src/context_lifecycle/hooks/: pre_tool_use.py
src/context_lifecycle/session/: anchor.py
tests/: conftest.py  test_anchor.py  test_capsule.py  test_checkpoint.py  test_config.py  test_context_cli.py  test_decisions.py  test_handoff.py  test_hook.py  test_ids.py  test_lifecycle.py  test_paths.py  test_pre_tool_use.py  test_session.py  test_stop.py  test_yaml_io.py
verification/: context-lifecycle-protocol-health.md  context-risk-enforcement.md  contextguard-hook-matrix.md  cross-pr-wiring-review.md  end-to-end-dry-runs.md  merge-readiness.md  operations-center-context-wiring.md  post-merge-wiring.md  private-consumer-context-wiring.md  runtime-presets.md  schema-example-validation.md  videofoundry-context-wiring.md
