[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-lifecycle"
version = "0.3.0"
description = "Cognition lifecycle schemas, I/O, and policy enforcement for orchestrated agent sessions"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "typer>=0.12",
  "repograph @ file:///home/dev/Documents/GitHub/RepoGraph",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cl = "context_lifecycle.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
context_lifecycle = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
